--- a/src/gui/KiemTien_GUI.form
+++ b/src/gui/KiemTien_GUI.form
@@ -217,6 +217,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="jtf_maNhanVien2">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtf_maNhanVien2KeyPressed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="200" y="280" width="280" height="33"/>
